# PyCraft

./: .gitignore  README.md  pyproject.toml
shaders/: fragment.frag  vertex.vert
src/PyCraft/: camera.py  engine.py  main.py  mesh.py  scene.py  settings.py
src/shaders/: __init__.py  buffer.py  constant.py  numpy_typed.py  uniform.py  utils.py
